# PROMPTFLOW-STT_PROMPT_ENHANCER

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: ai_provider_request.yml  bug_report.yml  stt_provider_request.yml
.github/workflows/: ci.yml  release.yml
docs/: DECISIONS.md  OPERATIONS.md  PRIVACY.md  RELEASE.md  THREAT_MODEL.md
docs/specs/: 03_ARCHITECTURE.md  06_AI_INTEGRATIONS.md
scripts/: setup-linux.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: http.rs  lib.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs  wav.rs
src-tauri/src/commands/: clipboard.rs  enhance.rs  hotkeys.rs  settings.rs  stt.rs
src-tauri/src/cost/: tracker.rs
src-tauri/src/enhancement/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/hotkeys/: manager.rs
src-tauri/src/providers/: anthropic.rs  custom.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs
src-tauri/src/storage/: db.rs  keychain.rs
src-tauri/src/stt/: mod.rs
src-tauri/src/stt/engines/: assembly_ai.rs  azure_stt.rs  deepgram.rs  google_stt.rs  whisper_api.rs  whisper_cpp.rs
src-tauri/src/updater/: manager.rs
src/components/onboarding/: OnboardingWizard.tsx
src/hooks/: useBackendSync.ts  useEnhancement.ts  useHotkeys.ts  useSTT.ts
src/lib/: catalog.test.ts  catalog.ts  speech.ts  tauri.ts  utils.test.ts
src/queries/: enhancementQueries.ts
src/stores/: settingsStore.ts  uiStore.ts
src/types/: index.ts
(+5 files in other folders)
